--- a/emotion_classification/src/roberta_emotion.ipynb
+++ b/emotion_classification/src/roberta_emotion.ipynb
@@ -45,7 +45,9 @@
         "\n",
         "import torch\n",
         "\n",
-        "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+        "from torch.nn import CrossEntropyLoss\n",
+        "\n",
+        "from transformers import AutoTokenizer, AutoModel, AutoConfig\n",
         "from transformers import Trainer, TrainingArguments\n",
         "\n",
         "import wandb"
@@ -161,7 +163,7 @@
     {
       "cell_type": "code",
       "source": [
-        "dataset.set_format(\"torch\", columns=[\"input_ids\", \"attention_mask\", \"label\"])"
+        "dataset.set_format(\"torch\", columns=[\"input_ids\", \"label\"])"
       ],
       "metadata": {
         "id": "YGsjKIq_wNWa"
@@ -208,11 +210,65 @@
     {
       "cell_type": "code",
       "source": [
-        "model = AutoModelForSequenceClassification.from_pretrained(\"roberta-base\", num_labels=6,\n",
-        "                                                           id2label=id2label, label2id=label2id).to(device)"
+        "config = AutoConfig.from_pretrained(\"roberta-base\")"
       ],
       "metadata": {
-        "id": "K3iSeEoRoJLb"
+        "id": "VJYEVRmmt0pd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "config.id2label = id2label\n",
+        "config.label2id = label2id\n",
+        "config.num_labels = 6"
+      ],
+      "metadata": {
+        "id": "GO78v59VuIMP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class RobertaEmotion(torch.nn.Module):\n",
+        "    def __init__(self, config):\n",
+        "        super().__init__()\n",
+        "        self.config = config\n",
+        "        self.num_labels = config.num_labels\n",
+        "        self.base_model = AutoModel.from_pretrained(\"roberta-base\", config)\n",
+        "        self.dropout = torch.nn.Dropout(p=0.1)\n",
+        "        self.output = torch.nn.Linear(config.hidden_size, config.num_labels)\n",
+        "\n",
+        "    def forward(self, input_ids, labels=None):\n",
+        "        model_output = self.base_model(input_ids)\n",
+        "        hidden = model_output.last_hidden_state\n",
+        "        logits = self.output(self.dropout(hidden[:, 0, :]))\n",
+        "\n",
+        "        loss = None\n",
+        "        if labels is not None:\n",
+        "            labels = labels.to(logits.device)\n",
+        "            loss_fct = CrossEntropyLoss()\n",
+        "            loss = loss_fct(logits.view(-1, self.num_labels), labels.view(-1))\n",
+        "\n",
+        "        return (loss, logits)"
+      ],
+      "metadata": {
+        "id": "YmRQgFzcYm4q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = RobertaEmotion(config).to(device)"
+      ],
+      "metadata": {
+        "id": "l9Dg4VjGoTxM"
       },
       "execution_count": null,
       "outputs": []
@@ -257,7 +313,10 @@
         "                                  evaluation_strategy=\"epoch\",\n",
         "                                  save_strategy=\"epoch\",\n",
         "                                  report_to=\"wandb\",\n",
-        "                                  disable_tqdm=False)"
+        "                                  disable_tqdm=False,\n",
+        "                                  push_to_hub=True,\n",
+        "                                  hub_strategy=\"every_save\",\n",
+        "                                  hub_model_id=\"ma2za/roberta-emotion\")"
       ],
       "metadata": {
         "id": "Uv01uCmCnK8b"
@@ -277,74 +336,10 @@
         "wandb.finish()"
       ],
       "metadata": {
-        "id": "uBrrPyZHnxIC",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 201
-        },
-        "outputId": "4a5487ed-8942-459f-c748-512c214336e3"
+        "id": "uBrrPyZHnxIC"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "\n",
-              "    <div>\n",
-              "      \n",
-              "      <progress value='1229' max='2000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [1229/2000 18:20 < 11:31, 1.12 it/s, Epoch 4.91/8]\n",
-              "    </div>\n",
-              "    <table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              " <tr style=\"text-align: left;\">\n",
-              "      <th>Epoch</th>\n",
-              "      <th>Training Loss</th>\n",
-              "      <th>Validation Loss</th>\n",
-              "      <th>Accuracy</th>\n",
-              "      <th>F1</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <td>1</td>\n",
-              "      <td>No log</td>\n",
-              "      <td>0.245056</td>\n",
-              "      <td>0.916000</td>\n",
-              "      <td>0.916588</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>2</td>\n",
-              "      <td>0.442700</td>\n",
-              "      <td>0.168471</td>\n",
-              "      <td>0.929500</td>\n",
-              "      <td>0.930128</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>3</td>\n",
-              "      <td>0.442700</td>\n",
-              "      <td>0.136620</td>\n",
-              "      <td>0.936000</td>\n",
-              "      <td>0.936377</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>4</td>\n",
-              "      <td>0.124000</td>\n",
-              "      <td>0.131442</td>\n",
-              "      <td>0.934000</td>\n",
-              "      <td>0.934007</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table><p>"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
