🦧 optimizer and lr_scheduler

--- a/emotion_classification/src/roberta_emotion.ipynb
+++ b/emotion_classification/src/roberta_emotion.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyO5Umk209S2sBJ4wCOa3O9F"
     },
     "kernelspec": {
       "name": "python3",
@@ -12,8 +13,8 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    "gpuClass": "standard",
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -47,8 +48,14 @@
         "\n",
         "from torch.nn import CrossEntropyLoss\n",
         "\n",
-        "from transformers import AutoTokenizer, AutoModel, AutoConfig\n",
+        "from torch.optim import AdamW\n",
+        "\n",
+        "from transformers import AutoTokenizer, AutoModel\n",
         "from transformers import Trainer, TrainingArguments\n",
+        "\n",
+        "from transformers import RobertaConfig\n",
+        "\n",
+        "from transformers.optimization import get_linear_schedule_with_warmup\n",
         "\n",
         "import wandb"
       ]
@@ -210,23 +217,13 @@
     {
       "cell_type": "code",
       "source": [
-        "config = AutoConfig.from_pretrained(\"roberta-base\")"
+        "config = RobertaConfig.from_pretrained(\"roberta-base\", \n",
+        "                                       id2label = id2label, \n",
+        "                                       label2id = label2id, \n",
+        "                                       num_labels = 6)"
       ],
       "metadata": {
-        "id": "VJYEVRmmt0pd"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "config.id2label = id2label\n",
-        "config.label2id = label2id\n",
-        "config.num_labels = 6"
-      ],
-      "metadata": {
-        "id": "GO78v59VuIMP"
+        "id": "DY2KC7O3j938"
       },
       "execution_count": null,
       "outputs": []
@@ -314,7 +311,7 @@
         "                                  save_strategy=\"epoch\",\n",
         "                                  report_to=\"wandb\",\n",
         "                                  disable_tqdm=False,\n",
-        "                                  push_to_hub=True,\n",
+        "                                  push_to_hub=False,\n",
         "                                  hub_strategy=\"every_save\",\n",
         "                                  hub_model_id=\"ma2za/roberta-emotion\")"
       ],
@@ -327,19 +324,60 @@
     {
       "cell_type": "code",
       "source": [
+        "optimizer = AdamW(model.parameters(),lr= 2e-05, betas= (0.9, 0.999), eps= 1e-08)\n",
+        "\n",
+        "\n",
+        "lr_scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=2000)\n",
+        "\n",
+        "\n",
         "trainer = Trainer(model=model, args=training_args,\n",
         "                  compute_metrics=compute_metrics,\n",
         "                  train_dataset=dataset[\"train\"],\n",
-        "                  eval_dataset=dataset[\"validation\"])\n",
+        "                  eval_dataset=dataset[\"validation\"], \n",
+        "                  optimizers=[optimizer, lr_scheduler])\n",
         "trainer.train()\n",
         "\n",
         "wandb.finish()"
       ],
       "metadata": {
-        "id": "uBrrPyZHnxIC"
+        "id": "uBrrPyZHnxIC",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 75
+        },
+        "outputId": "1525f819-5326-4596-e513-359117072b47"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='128' max='2000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [ 128/2000 01:57 < 29:00, 1.08 it/s, Epoch 0.51/8]\n",
+              "    </div>\n",
+              "    <table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              " <tr style=\"text-align: left;\">\n",
+              "      <th>Epoch</th>\n",
+              "      <th>Training Loss</th>\n",
+              "      <th>Validation Loss</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table><p>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
