--- a/emotion_classification/src/roberta_emotion.ipynb
+++ b/emotion_classification/src/roberta_emotion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5Umk209S2sBJ4wCOa3O9F"
+      "authorship_tag": "ABX9TyM1t8935ESg3cKF/Jjy/8CE"
     },
     "kernelspec": {
       "name": "python3",
@@ -50,13 +50,13 @@
         "\n",
         "from torch.optim import AdamW\n",
         "\n",
-        "from transformers import AutoTokenizer, AutoModel\n",
+        "from transformers import AutoTokenizer, AutoModel, PreTrainedModel\n",
         "from transformers import Trainer, TrainingArguments\n",
         "\n",
         "from transformers import RobertaConfig\n",
         "\n",
         "from transformers.optimization import get_linear_schedule_with_warmup\n",
-        "\n",
+        "from transformers.modeling_outputs import SequenceClassifierOutput\n",
         "import wandb"
       ]
     },
@@ -231,17 +231,16 @@
     {
       "cell_type": "code",
       "source": [
-        "class RobertaEmotion(torch.nn.Module):\n",
+        "class RobertaEmotion(PreTrainedModel):\n",
         "    def __init__(self, config):\n",
-        "        super().__init__()\n",
-        "        self.config = config\n",
+        "        super().__init__(config)\n",
         "        self.num_labels = config.num_labels\n",
-        "        self.base_model = AutoModel.from_pretrained(\"roberta-base\", config)\n",
+        "        self.backbone = AutoModel.from_pretrained(\"roberta-base\", config)\n",
         "        self.dropout = torch.nn.Dropout(p=0.1)\n",
         "        self.output = torch.nn.Linear(config.hidden_size, config.num_labels)\n",
         "\n",
-        "    def forward(self, input_ids, labels=None):\n",
-        "        model_output = self.base_model(input_ids)\n",
+        "    def forward(self, input_ids, labels=None, attention_mask=None):\n",
+        "        model_output = self.backbone(input_ids)\n",
         "        hidden = model_output.last_hidden_state\n",
         "        logits = self.output(self.dropout(hidden[:, 0, :]))\n",
         "\n",
@@ -251,7 +250,7 @@
         "            loss_fct = CrossEntropyLoss()\n",
         "            loss = loss_fct(logits.view(-1, self.num_labels), labels.view(-1))\n",
         "\n",
-        "        return (loss, logits)"
+        "        return SequenceClassifierOutput(loss=loss, logits=logits)"
       ],
       "metadata": {
         "id": "YmRQgFzcYm4q"
@@ -278,6 +277,17 @@
       "metadata": {
         "id": "qGXulHvDwQq0"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.base_model.requires_grad = False"
+      ],
+      "metadata": {
+        "id": "ma099QuqibsE"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -340,44 +350,10 @@
         "wandb.finish()"
       ],
       "metadata": {
-        "id": "uBrrPyZHnxIC",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 75
-        },
-        "outputId": "1525f819-5326-4596-e513-359117072b47"
+        "id": "uBrrPyZHnxIC"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "\n",
-              "    <div>\n",
-              "      \n",
-              "      <progress value='128' max='2000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [ 128/2000 01:57 < 29:00, 1.08 it/s, Epoch 0.51/8]\n",
-              "    </div>\n",
-              "    <table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              " <tr style=\"text-align: left;\">\n",
-              "      <th>Epoch</th>\n",
-              "      <th>Training Loss</th>\n",
-              "      <th>Validation Loss</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "  </tbody>\n",
-              "</table><p>"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -419,7 +395,7 @@
         "    tokenizer=tokenizer,\n",
         "    data=\"emotion\",\n",
         "    subset=\"split\",\n",
-        "    split=\"test\",\n",
+        "    split=\"validation\",\n",
         "    metric=\"accuracy\",\n",
         "    label_mapping=label2id,\n",
         "    strategy=\"bootstrap\",\n",
