--- a/emotion_classification/src/roberta_emotion.ipynb
+++ b/emotion_classification/src/roberta_emotion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1t8935ESg3cKF/Jjy/8CE"
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +17,28 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/ma2za/emotion-classification.git"
+      ],
+      "metadata": {
+        "id": "59LLJSo6wHaQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mv emotion-classification/emotion_classification/src/roberta_emotion roberta_emotion"
+      ],
+      "metadata": {
+        "id": "Q6g7WexjxIyz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
     {
       "cell_type": "code",
       "source": [
@@ -36,29 +58,31 @@
       },
       "outputs": [],
       "source": [
-        "from datasets import load_dataset\n",
-        "\n",
-        "from evaluate import evaluator\n",
-        "\n",
-        "from huggingface_hub import notebook_login\n",
-        "\n",
-        "from sklearn.metrics import accuracy_score, f1_score\n",
-        "\n",
         "import torch\n",
-        "\n",
-        "from torch.nn import CrossEntropyLoss\n",
-        "\n",
+        "import wandb\n",
+        "from datasets import load_dataset\n",
+        "from evaluate import evaluator\n",
+        "from huggingface_hub import notebook_login\n",
+        "from sklearn.metrics import accuracy_score, f1_score\n",
         "from torch.optim import AdamW\n",
-        "\n",
-        "from transformers import AutoTokenizer, AutoModel, PreTrainedModel\n",
-        "from transformers import Trainer, TrainingArguments\n",
-        "\n",
-        "from transformers import RobertaConfig\n",
-        "\n",
-        "from transformers.optimization import get_linear_schedule_with_warmup\n",
-        "from transformers.modeling_outputs import SequenceClassifierOutput\n",
-        "import wandb"
+        "from torch.utils.data import DataLoader\n",
+        "from tqdm.notebook import tqdm\n",
+        "from transformers import AutoTokenizer\n",
+        "from transformers.data.data_collator import default_data_collator\n",
+        "from transformers.optimization import get_linear_schedule_with_warmup"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from roberta_emotion.modeling_roberta_emotion import RobertaEmotion\n",
+        "from roberta_emotion.configuration_roberta_emotion import RobertaEmotionConfig"
+      ],
+      "metadata": {
+        "id": "DhInzzztxy9k"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -206,6 +230,48 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "train_dataset = dataset[\"train\"]\n",
+        "train_dataset.remove_columns([\"text\"])\n",
+        "\n",
+        "valid_dataset = dataset[\"validation\"]\n",
+        "valid_dataset.remove_columns([\"text\"])"
+      ],
+      "metadata": {
+        "id": "IDqhkAzgPDIX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_loader = DataLoader(\n",
+        "            train_dataset,\n",
+        "            batch_size=64,\n",
+        "            collate_fn=default_data_collator,\n",
+        "            drop_last=False,\n",
+        "            num_workers=0,\n",
+        "            pin_memory=True\n",
+        "        )\n",
+        "\n",
+        "valid_loader = DataLoader(\n",
+        "            valid_dataset,\n",
+        "            batch_size=64,\n",
+        "            collate_fn=default_data_collator,\n",
+        "            drop_last=False,\n",
+        "            num_workers=0,\n",
+        "            pin_memory=True\n",
+        "        )"
+      ],
+      "metadata": {
+        "id": "RDF02v2HP6dk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Model"
@@ -217,13 +283,10 @@
     {
       "cell_type": "code",
       "source": [
-        "config = RobertaConfig.from_pretrained(\"roberta-base\", \n",
-        "                                       id2label = id2label, \n",
-        "                                       label2id = label2id, \n",
-        "                                       num_labels = 6)"
+        "RobertaEmotionConfig.register_for_auto_class()"
       ],
       "metadata": {
-        "id": "DY2KC7O3j938"
+        "id": "_v-Yu1fXZ2kb"
       },
       "execution_count": null,
       "outputs": []
@@ -231,29 +294,24 @@
     {
       "cell_type": "code",
       "source": [
-        "class RobertaEmotion(PreTrainedModel):\n",
-        "    def __init__(self, config):\n",
-        "        super().__init__(config)\n",
-        "        self.num_labels = config.num_labels\n",
-        "        self.backbone = AutoModel.from_pretrained(\"roberta-base\", config)\n",
-        "        self.dropout = torch.nn.Dropout(p=0.1)\n",
-        "        self.output = torch.nn.Linear(config.hidden_size, config.num_labels)\n",
-        "\n",
-        "    def forward(self, input_ids, labels=None, attention_mask=None):\n",
-        "        model_output = self.backbone(input_ids)\n",
-        "        hidden = model_output.last_hidden_state\n",
-        "        logits = self.output(self.dropout(hidden[:, 0, :]))\n",
-        "\n",
-        "        loss = None\n",
-        "        if labels is not None:\n",
-        "            labels = labels.to(logits.device)\n",
-        "            loss_fct = CrossEntropyLoss()\n",
-        "            loss = loss_fct(logits.view(-1, self.num_labels), labels.view(-1))\n",
-        "\n",
-        "        return SequenceClassifierOutput(loss=loss, logits=logits)"
+        "RobertaEmotion.register_for_auto_class(\"AutoModel\")"
       ],
       "metadata": {
-        "id": "YmRQgFzcYm4q"
+        "id": "ETurkMwqZ8Ry"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "config = RobertaEmotionConfig(id2label = id2label, \n",
+        "                              label2id = label2id, \n",
+        "                              hidden_size = 768,\n",
+        "                              num_labels = 6)"
+      ],
+      "metadata": {
+        "id": "DY2KC7O3j938"
       },
       "execution_count": null,
       "outputs": []
@@ -281,7 +339,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model.base_model.requires_grad = False"
+        "model.backbone.requires_grad = False"
       ],
       "metadata": {
         "id": "ma099QuqibsE"
@@ -292,12 +350,22 @@
     {
       "cell_type": "code",
       "source": [
-        "def compute_metrics(pred):\n",
-        "    labels = pred.label_ids\n",
-        "    preds = pred.predictions.argmax(-1)\n",
+        "optimizer = AdamW(model.parameters(),lr= 2e-05, betas= (0.9, 0.999), eps= 1e-08)\n",
+        "lr_scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=2000)"
+      ],
+      "metadata": {
+        "id": "Ix9xgLlSti85"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compute_metrics(preds, labels):\n",
         "    f1 = f1_score(labels, preds, average=\"weighted\")\n",
         "    acc = accuracy_score(labels, preds)\n",
-        "    return {\"accuracy\": acc, \"f1\": f1}"
+        "    return acc , f1"
       ],
       "metadata": {
         "id": "-Y8b4S-enJ3v"
@@ -308,25 +376,25 @@
     {
       "cell_type": "code",
       "source": [
-        "batch_size = 64\n",
-        "training_args = TrainingArguments(output_dir=\"results\",\n",
-        "                                  num_train_epochs=8,\n",
-        "                                  learning_rate=2e-5,\n",
-        "                                  per_device_train_batch_size=batch_size,\n",
-        "                                  per_device_eval_batch_size=batch_size,\n",
-        "                                  load_best_model_at_end=True,\n",
-        "                                  metric_for_best_model=\"f1\",\n",
-        "                                  weight_decay=0.01,\n",
-        "                                  evaluation_strategy=\"epoch\",\n",
-        "                                  save_strategy=\"epoch\",\n",
-        "                                  report_to=\"wandb\",\n",
-        "                                  disable_tqdm=False,\n",
-        "                                  push_to_hub=False,\n",
-        "                                  hub_strategy=\"every_save\",\n",
-        "                                  hub_model_id=\"ma2za/roberta-emotion\")"
+        "def evaluation(dataloader):\n",
+        "    model.eval()\n",
+        "    total_samples = 0\n",
+        "    total_loss = 0\n",
+        "    total_acc = 0\n",
+        "    total_f1 = 0\n",
+        "    for step, batch in tqdm(enumerate(dataloader), total=len(dataloader)):\n",
+        "        input_ids = batch[\"input_ids\"].to(device)\n",
+        "        labels = batch[\"labels\"].to(device)\n",
+        "        outputs = model(input_ids=input_ids, labels=labels)\n",
+        "        acc, f1 = compute_metrics(outputs.logits.argmax(-1).detach().cpu(), labels.detach().cpu())\n",
+        "        total_acc += acc*len(labels)\n",
+        "        total_f1 += f1*len(labels)\n",
+        "        total_samples += len(labels)\n",
+        "        total_loss += outputs.loss.detach()*len(labels)\n",
+        "    return total_acc/total_samples, total_f1/total_samples, total_loss/total_samples"
       ],
       "metadata": {
-        "id": "Uv01uCmCnK8b"
+        "id": "wHEM40l95uqf"
       },
       "execution_count": null,
       "outputs": []
@@ -334,23 +402,32 @@
     {
       "cell_type": "code",
       "source": [
-        "optimizer = AdamW(model.parameters(),lr= 2e-05, betas= (0.9, 0.999), eps= 1e-08)\n",
+        "best_f1 = 0\n",
         "\n",
+        "wandb.init(project=\"emotion_classifier\")\n",
         "\n",
-        "lr_scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=2000)\n",
+        "for epoch in range(8):\n",
+        "    model.train()\n",
+        "    for step, batch in tqdm(enumerate(train_loader), total=len(train_loader)):\n",
+        "        model.zero_grad()\n",
+        "        input_ids = batch[\"input_ids\"].to(device)\n",
+        "        labels = batch[\"labels\"].to(device)\n",
+        "        outputs = model(input_ids=input_ids, labels=labels)\n",
+        "        outputs.loss.backward()\n",
         "\n",
+        "        optimizer.step()\n",
+        "        lr_scheduler.step()\n",
+        "    valid_acc, valid_f1, valid_loss = evaluation(valid_loader)\n",
+        "    wandb.log({\"eval/loss\": valid_loss, \"eval/f1\": valid_f1, \"eval/accuracy\": valid_acc})\n",
         "\n",
-        "trainer = Trainer(model=model, args=training_args,\n",
-        "                  compute_metrics=compute_metrics,\n",
-        "                  train_dataset=dataset[\"train\"],\n",
-        "                  eval_dataset=dataset[\"validation\"], \n",
-        "                  optimizers=[optimizer, lr_scheduler])\n",
-        "trainer.train()\n",
+        "    if best_f1 < valid_f1:\n",
+        "        best_f1 = valid_f1\n",
+        "        torch.save(model.state_dict(), \"pytorch_model.bin\")\n",
         "\n",
         "wandb.finish()"
       ],
       "metadata": {
-        "id": "uBrrPyZHnxIC"
+        "id": "GUNPC0AJRMLa"
       },
       "execution_count": null,
       "outputs": []
@@ -401,7 +478,9 @@
         "    strategy=\"bootstrap\",\n",
         "    n_resamples=10,\n",
         "    random_state=0\n",
-        ")"
+        ")\n",
+        "\n",
+        "results"
       ],
       "metadata": {
         "id": "Q4sBChKK6wnp"
@@ -411,20 +490,9 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "results"
-      ],
-      "metadata": {
-        "id": "Igw71enW7Bo5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "YgYcmLHw7CR1"
+        "id": "uO_00j6hoA7J"
       },
       "execution_count": null,
       "outputs": []
