--- a/emotion_classification/src/roberta_emotion.ipynb
+++ b/emotion_classification/src/roberta_emotion.ipynb
@@ -42,7 +42,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -q transformers datasets evaluate wandb"
+        "!pip install -q transformers datasets evaluate wandb \"ray[tune]\""
       ],
       "metadata": {
         "id": "iTvyV2vhFjJ3"
@@ -69,7 +69,12 @@
         "from tqdm.notebook import tqdm\n",
         "from transformers import AutoTokenizer\n",
         "from transformers.data.data_collator import default_data_collator\n",
-        "from transformers.optimization import get_linear_schedule_with_warmup"
+        "from transformers.optimization import get_linear_schedule_with_warmup\n",
+        "\n",
+        "import numpy as np\n",
+        "import os\n",
+        "import random\n",
+        "from functools import partial"
       ]
     },
     {
@@ -80,6 +85,43 @@
       ],
       "metadata": {
         "id": "DhInzzztxy9k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from ray import tune\n",
+        "from ray.tune import CLIReporter\n",
+        "from ray.tune.schedulers import ASHAScheduler"
+      ],
+      "metadata": {
+        "id": "pQOsoUKD9xjw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(0)\n",
+        "random.seed(0)\n",
+        "np.random.seed(0)"
+      ],
+      "metadata": {
+        "id": "64i4NV5z7hsl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%env RAY_PICKLE_VERBOSE_DEBUG=1"
+      ],
+      "metadata": {
+        "id": "egzJy5JvESV0"
       },
       "execution_count": null,
       "outputs": []
@@ -245,33 +287,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "train_loader = DataLoader(\n",
-        "            train_dataset,\n",
-        "            batch_size=64,\n",
-        "            collate_fn=default_data_collator,\n",
-        "            drop_last=False,\n",
-        "            num_workers=0,\n",
-        "            pin_memory=True\n",
-        "        )\n",
-        "\n",
-        "valid_loader = DataLoader(\n",
-        "            valid_dataset,\n",
-        "            batch_size=64,\n",
-        "            collate_fn=default_data_collator,\n",
-        "            drop_last=False,\n",
-        "            num_workers=0,\n",
-        "            pin_memory=True\n",
-        "        )"
-      ],
-      "metadata": {
-        "id": "RDF02v2HP6dk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## Model"
@@ -305,24 +320,13 @@
     {
       "cell_type": "code",
       "source": [
-        "config = RobertaEmotionConfig(id2label = id2label, \n",
+        "emotion_config = RobertaEmotionConfig(id2label = id2label, \n",
         "                              label2id = label2id, \n",
         "                              hidden_size = 768,\n",
         "                              num_labels = 6)"
       ],
       "metadata": {
         "id": "DY2KC7O3j938"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model = RobertaEmotion(config).to(device)"
-      ],
-      "metadata": {
-        "id": "l9Dg4VjGoTxM"
       },
       "execution_count": null,
       "outputs": []
@@ -339,22 +343,10 @@
     {
       "cell_type": "code",
       "source": [
-        "model.backbone.requires_grad = False"
+        "#model.backbone.requires_grad = False"
       ],
       "metadata": {
         "id": "ma099QuqibsE"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "optimizer = AdamW(model.parameters(),lr= 2e-05, betas= (0.9, 0.999), eps= 1e-08)\n",
-        "lr_scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=2000)"
-      ],
-      "metadata": {
-        "id": "Ix9xgLlSti85"
       },
       "execution_count": null,
       "outputs": []
@@ -376,7 +368,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def evaluation(dataloader):\n",
+        "def evaluation(model, dataloader):\n",
         "    model.eval()\n",
         "    total_samples = 0\n",
         "    total_loss = 0\n",
@@ -390,7 +382,7 @@
         "        total_acc += acc*len(labels)\n",
         "        total_f1 += f1*len(labels)\n",
         "        total_samples += len(labels)\n",
-        "        total_loss += outputs.loss.detach()*len(labels)\n",
+        "        total_loss += outputs.loss.detach().cpu()*len(labels)\n",
         "    return total_acc/total_samples, total_f1/total_samples, total_loss/total_samples"
       ],
       "metadata": {
@@ -402,32 +394,138 @@
     {
       "cell_type": "code",
       "source": [
-        "best_f1 = 0\n",
+        "def train(model, checkpoint_dir, optimizer, lr_scheduler, train_loader, valid_loader, tune_flag=False):\n",
+        "    wandb.init(project=\"emotion_classifier\")\n",
+        "    best_f1 = 0\n",
+        "    for epoch in range(8):\n",
+        "        model.train()\n",
+        "        for step, batch in tqdm(enumerate(train_loader), total=len(train_loader)):\n",
+        "            model.zero_grad()\n",
+        "            input_ids = batch[\"input_ids\"].to(device)\n",
+        "            labels = batch[\"labels\"].to(device)\n",
+        "            outputs = model(input_ids=input_ids, labels=labels)\n",
+        "            outputs.loss.backward()\n",
         "\n",
-        "wandb.init(project=\"emotion_classifier\")\n",
+        "            optimizer.step()\n",
+        "            lr_scheduler.step()\n",
+        "        valid_acc, valid_f1, valid_loss = evaluation(model, valid_loader)\n",
+        "        wandb.log({\"eval/loss\": valid_loss, \"eval/f1\": valid_f1, \"eval/accuracy\": valid_acc})\n",
         "\n",
-        "for epoch in range(8):\n",
-        "    model.train()\n",
-        "    for step, batch in tqdm(enumerate(train_loader), total=len(train_loader)):\n",
-        "        model.zero_grad()\n",
-        "        input_ids = batch[\"input_ids\"].to(device)\n",
-        "        labels = batch[\"labels\"].to(device)\n",
-        "        outputs = model(input_ids=input_ids, labels=labels)\n",
-        "        outputs.loss.backward()\n",
+        "        if tune_flag:\n",
         "\n",
-        "        optimizer.step()\n",
-        "        lr_scheduler.step()\n",
-        "    valid_acc, valid_f1, valid_loss = evaluation(valid_loader)\n",
-        "    wandb.log({\"eval/loss\": valid_loss, \"eval/f1\": valid_f1, \"eval/accuracy\": valid_acc})\n",
+        "            with tune.checkpoint_dir(epoch) as checkpoint_dir:\n",
+        "                path = os.path.join(checkpoint_dir, \"checkpoint\")\n",
+        "                torch.save((model.state_dict(), optimizer.state_dict()), path)\n",
         "\n",
-        "    if best_f1 < valid_f1:\n",
-        "        best_f1 = valid_f1\n",
-        "        torch.save(model.state_dict(), \"pytorch_model.bin\")\n",
+        "            tune.report(loss=valid_loss, accuracy=valid_acc)\n",
+        "        else:\n",
+        "            if best_f1 < valid_f1:\n",
+        "                best_f1 = valid_f1\n",
+        "                path = os.path.join(checkpoint_dir, \"pytorch_model.bin\")\n",
+        "                torch.save(model.state_dict(), path)\n",
         "\n",
-        "wandb.finish()"
+        "    wandb.finish()"
       ],
       "metadata": {
         "id": "GUNPC0AJRMLa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train_roberta(config, checkpoint_dir=None):\n",
+        "    model = RobertaEmotion(emotion_config).to(device)\n",
+        "    optimizer = AdamW(model.parameters(),lr= 2e-05, betas= (0.9, 0.999), eps= 1e-08)\n",
+        "    lr_scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=2000)\n",
+        "\n",
+        "    train_loader = DataLoader(\n",
+        "                train_dataset,\n",
+        "                batch_size=int(config[\"batch_size\"]),\n",
+        "                collate_fn=default_data_collator,\n",
+        "                drop_last=False,\n",
+        "                num_workers=0,\n",
+        "                pin_memory=True\n",
+        "                )\n",
+        "\n",
+        "    valid_loader = DataLoader(\n",
+        "                valid_dataset,\n",
+        "                batch_size=int(config[\"batch_size\"]),\n",
+        "                collate_fn=default_data_collator,\n",
+        "                drop_last=False,\n",
+        "                num_workers=0,\n",
+        "                pin_memory=True\n",
+        "            )\n",
+        "\n",
+        "    train(model, checkpoint_dir, optimizer, lr_scheduler, train_loader, valid_loader)\n",
+        "    return model"
+      ],
+      "metadata": {
+        "id": "pGuuTj5N-59u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tuning():\n",
+        "    data_dir = os.path.abspath(\"./data\")\n",
+        "    config = {\n",
+        "        \"batch_size\": tune.choice([32, 64, 128])\n",
+        "    }\n",
+        "    scheduler = ASHAScheduler(\n",
+        "        metric=\"loss\",\n",
+        "        mode=\"min\",\n",
+        "        max_t=10,\n",
+        "        grace_period=1,\n",
+        "        reduction_factor=2)\n",
+        "    reporter = CLIReporter(\n",
+        "        # ``parameter_columns=[\"l1\", \"l2\", \"lr\", \"batch_size\"]``,\n",
+        "        metric_columns=[\"loss\", \"accuracy\", \"training_iteration\"])\n",
+        "    result = tune.run(\n",
+        "        partial(train_roberta, data_dir=data_dir),\n",
+        "        resources_per_trial={\"cpu\": 1, \"gpu\": 1},\n",
+        "        config=config,\n",
+        "        num_samples=10,\n",
+        "        scheduler=scheduler,\n",
+        "        progress_reporter=reporter)\n",
+        "\n",
+        "    best_trial = result.get_best_trial(\"loss\", \"min\", \"last\")\n",
+        "\n",
+        "    best_trained_model = RobertaEmotion(emotion_config).to(device)\n",
+        "\n",
+        "    best_checkpoint_dir = best_trial.checkpoint.value\n",
+        "    model_state, optimizer_state = torch.load(os.path.join(\n",
+        "        best_checkpoint_dir, \"checkpoint\"))\n",
+        "    best_trained_model.load_state_dict(model_state)"
+      ],
+      "metadata": {
+        "id": "j-RZW8IRHJr9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = train_roberta({\"batch_size\": 64}, checkpoint_dir=\".\")"
+      ],
+      "metadata": {
+        "id": "ndJjf5uXHMdD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_state = torch.load(os.path.join(\".\", \"pytorch_model.bin\"))\n",
+        "model.load_state_dict(model_state)"
+      ],
+      "metadata": {
+        "id": "9NOMeUZSDPcE"
       },
       "execution_count": null,
       "outputs": []
@@ -439,7 +537,7 @@
         "tokenizer.push_to_hub(\"roberta-emotion\")"
       ],
       "metadata": {
-        "id": "H2gG6GkffP7u"
+        "id": "fBZ9vsTzC51f"
       },
       "execution_count": null,
       "outputs": []
@@ -472,8 +570,8 @@
         "    tokenizer=tokenizer,\n",
         "    data=\"emotion\",\n",
         "    subset=\"split\",\n",
-        "    split=\"validation\",\n",
-        "    metric=\"accuracy\",\n",
+        "    split=\"test\",\n",
+        "    metric=\"f1\",\n",
         "    label_mapping=label2id,\n",
         "    strategy=\"bootstrap\",\n",
         "    n_resamples=10,\n",
